fix mobile header on mobiles

--- a/app/assets/stylesheets/components/_common.scss
+++ b/app/assets/stylesheets/components/_common.scss
@@ -81,6 +81,7 @@
 .header-phone-img{
   width: 283px;
   max-width: 100%;
+  height: 259px;
 }
 .form-page{
   min-height: 100vh;
